--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -19,43 +19,24 @@ http {
 
 
     # Configuración principal del servidor
-    server {
-        listen 80;
-        server_name localhost;
-        root /usr/share/nginx/html;
-        index index.html;
+server {
+    listen 80;
+    server_name localhost;
+    root /usr/share/nginx/html;
+    index index.html;
 
-        # Configuración de seguridad básica
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
+    # Seguridad básica
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
 
-        # Configuración específica para assets (DEBE IR ANTES de location /)
-        # Usamos ^~ para máxima prioridad sobre regex
-        location ^~ /assets/ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            # Logs para debug
-            access_log /var/log/nginx/assets_access.log;
-            error_log /var/log/nginx/assets_error.log debug;
-        }
+    # ❌ DESACTIVAR CACHE TOTAL
+    location / {
+        add_header Cache-Control "no-store, no-cache, must-revalidate, max-age=0" always;
+        add_header Pragma "no-cache" always;
+        add_header Expires "0" always;
 
-        # Configuración para archivos estáticos (CSS, JS, imágenes)
-        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|jfif|webp)$ {
-            root /usr/share/nginx/html;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            try_files $uri =404;
-        }
-
-        # Manejo de rutas SPA (Single Page Application) - DEBE IR AL FINAL
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
-
-        # Configuración para archivos de texto
-        location ~* \.(txt|md)$ {
-            add_header Content-Type text/plain;
-        }
+        try_files $uri $uri/ /index.html;
     }
+}
+
 }
