--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -29,12 +29,38 @@ server {
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
 
-    # ❌ DESACTIVAR CACHE TOTAL
-    location / {
+    # HTML sin cache (siempre obtener la última versión)
+    location "~* \.html$" {
         add_header Cache-Control "no-store, no-cache, must-revalidate, max-age=0" always;
         add_header Pragma "no-cache" always;
         add_header Expires "0" always;
+        try_files $uri /index.html;
+    }
 
+    # Archivos versionados (CSS, JS con hash) - cache largo
+    location "~* \.[0-9a-f]{8}\.css$" {
+        add_header Cache-Control "public, max-age=31536000, immutable" always;
+        expires 1y;
+    }
+
+    location "~* \.[0-9a-f]{8}\.js$" {
+        add_header Cache-Control "public, max-age=31536000, immutable" always;
+        expires 1y;
+    }
+
+    # Assets estáticos (imágenes) - cache medio
+    location "~* \.(jpg|jpeg|png|gif|ico|svg|webp)$" {
+        add_header Cache-Control "public, max-age=2592000" always;
+        expires 30d;
+    }
+
+    # CSS y JS sin versionar (fallback) - sin cache
+    location "~* \.(css|js)$" {
+        add_header Cache-Control "no-store, no-cache, must-revalidate, max-age=0" always;
+    }
+
+    # Root location
+    location / {
         try_files $uri $uri/ /index.html;
     }
 }
