--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,5 @@
-# Dependencias
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Archivos de build
 dist/
-build/
-*.min.css
-*.min.js
-
-# Archivos del sistema
-.DS_Store
-Thumbs.db
-*.swp
-*.swo
-*~
-
-# Logs
+.version
 *.log
-logs/
-
-# Archivos temporales
-*.tmp
-*.temp
-.cache/
-
-# Variables de entorno
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# IDE
-.vscode/
-.idea/
-*.sublime-project
-*.sublime-workspace
-
-# Docker
-.dockerignore
-
-# Backup
-*.bak
-*.backup 
+.DS_Store
